[package]
name = "qubit-atomic"
version = "0.11.0"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-atomic"
description = "User-friendly atomic operations wrapper providing JDK-like atomic API"
homepage = "https://github.com/qubit-ltd/rs-atomic"
documentation = "https://docs.rs/qubit-atomic"
readme = "README.md"
keywords = ["atomic", "concurrent", "lock-free", "thread-safe", "qubit"]
categories = ["concurrency", "data-structures"]
exclude = [
    "coverage.sh",
    "COVERAGE.md",
    "COVERAGE.zh_CN.md",
    ".circleci/*",
    "ci-check.sh",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_atomic"

[dependencies]
arc-swap = "1"
portable-atomic = "1"

[dev-dependencies]
# For concurrent model checking
loom = "0.7"

# For performance benchmarking
# criterion = "0.5"

# [[bench]]
# name = "atomic_bench"
# harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
lto = true
codegen-units = 1
